--- a/2025 POZ ARAMA (2).html
+++ b/2025 POZ ARAMA (2).html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
